--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>goit-homeweork-1-attempt-1</title>
+    <title>goit-homeweork-2-attempt-1</title>
   </head>
   <body>
     <header>
@@ -10,7 +10,7 @@
       <a href="WebStudio">WebStudio</a>
       <nav class="menu">
         <a href="/Agencja">Agencja</a>
-        <a href="/Portfolio">Portfolio</a>
+        <a href="/portfolio.html">Portfolio</a>
         <a href="/Kontakt">Kontakt</a>
       </nav>
       <a href="tel:+48111111111">Telefon</a>
