--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,18 @@
       </nav>
       <a href="tel:+48111111111">Telefon</a>
       <a href="mailto:info@devstudio.com">eMail</a>
+      <!---/menu--->
     </header>
 
-    asfjhasfkjahsfgoj
+    <!---stopka-->
+    <footer>
+      <address>
+        <p><a href="WebStudio">WebStudio</a></p>
+        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+        <a href="tel:+48111111111">Telefon</a>
+        <a href="mailto:info@devstudio.com">eMail</a>
+      </address>
+    </footer>
+    <!---/stopka-->
   </body>
 </html>
