--- a/portfolio.html
+++ b/portfolio.html
@@ -3,28 +3,151 @@
   <head>
     <meta charset="UTF-8" />
     <title>goit-homeweork-2-attempt-1</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!---menu-->
-      <a href="WebStudio">WebStudio</a>
+      <a class="logo" href="/goit-markup-hw-02/index.html">WebStudio</a>
       <nav class="menu">
-        <a href="/Agencja">Agencja</a>
-        <a href="/Portfolio">Portfolio</a>
-        <a href="/Kontakt">Kontakt</a>
+        <a class="link" href="/Agencja">Agencja</a>
+        <a class="link" href="/Portfolio">Portfolio</a>
+        <a class="link" href="/Kontakt">Kontakt</a>
       </nav>
-      <a href="tel:+48111111111">Telefon</a>
-      <a href="mailto:info@devstudio.com">eMail</a>
+      <a class="communication" href="tel:+48111111111">Telefon</a>
+      <a class="communication" href="mailto:info@devstudio.com">eMail</a>
       <!---/menu--->
     </header>
 
+    <!---filters-->
+    <ul>
+      <li><button class="filters" type="button">Wszystkie</button></li>
+      <li><button class="filters" type="button">Strony</button></li>
+      <li><button class="filters" type="button">Aplikacje</button></li>
+      <li><button class="filters" type="button">Dizajn</button></li>
+      <li><button class="filters" type="button">Marketing</button></li>
+    </ul>
+    <!---/filters-->
+    <main>
+      <ul>
+        <li>
+          <figure>
+            <img
+              src="images/h21.jpg"
+              alt="otwarty laptop wyswietlajacy trzy zdjęcia"
+              width="150"
+              height="150"
+            />
+            <figcaption>Technocrack Strona internetowa</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h22.jpg"
+              alt="dwóch koszykarzy jeden w barwach new orlean drugi golden star walczy o piłkę "
+              width="150"
+              height="150"
+            />
+            <figcaption>Grafika New Orlean vs Golden Star Dizajn</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h23.jpg"
+              alt="napis the seafood restaurant est 2001 na tle ryby"
+              width="150"
+              height="150"
+            />
+            <figcaption>Restauracja Seafood Aplikacja</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h24.jpg"
+              alt="czarne słuchawki nauszne"
+              width="150"
+              height="150"
+            />
+            <figcaption>Projekt Prime Marketing</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h25.jpg"
+              alt="dwa pudełka jedno białe drugie koloru kartonu"
+              width="150"
+              height="150"
+            />
+            <figcaption>Projekt Boxes Aplikacja</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h26.jpg"
+              alt="monitor apple wyświetlający białe napisy na czornym tle"
+              width="150"
+              height="150"
+            />
+            <figcaption>
+              Inspiration has no Borders Strona internetowa
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h27.jpg"
+              alt="otwarty magazyn na stronach dwa duze zdjęcia"
+              width="150"
+              height="150"
+            />
+            <figcaption>Magazyn Limited Edition Dizajn</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h28.jpg"
+              alt="biała zawieszka  lab el tag wisząca na sznurku"
+              width="150"
+              height="150"
+            />
+            <figcaption>Projekt LAB Marketing</figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="images/h29.jpg"
+              alt="otwarty laptop wyswietlajacy prezantacje growing business, nad klawiatura dłonie"
+              width="150"
+              height="150"
+            />
+            <figcaption>Growing Business Aplikacja</figcaption>
+          </figure>
+        </li>
+      </ul>
+    </main>
     <!---stopka-->
     <footer>
       <address>
-        <p><a href="WebStudio">WebStudio</a></p>
+        <p>
+          <a class="logo" href="/goit-markup-hw-02/index.html">WebStudio</a>
+        </p>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a href="tel:+48111111111">Telefon</a>
-        <a href="mailto:info@devstudio.com">eMail</a>
+        <a class="communication" href="tel:+48111111111">Telefon</a>
+        <a class="communication" href="mailto:info@devstudio.com">eMail</a>
       </address>
     </footer>
     <!---/stopka-->
