deleted / from links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="WebStudio">WebStudio</a>
       <nav class="menu">
         <a href="/Agencja">Agencja</a>
-        <a href="/portfolio.html">Portfolio</a>
+        <a href="portfolio.html">Portfolio</a>
         <a href="/Kontakt">Kontakt</a>
       </nav>
       <a href="tel:+48111111111">Telefon</a>
