--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <!---menu-->
-      <a class="logo" href="/index.html">WebStudio</a>
+      <a class="logo" href="index.html">WebStudio</a>
       <nav class="menu">
         <a class="link" href="/Agencja">Agencja</a>
         <a class="link" href="/Portfolio">Portfolio</a>
