--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,9 @@
   <body>
     <header>
       <!---menu-->
-      <a class="logo" href="index.html">WebStudio</a>
+      <a class="logoblue" href="index.html"
+        >Web<span class="logoblack">Studio</span></a
+      >
       <nav class="menu">
         <a class="link" href="/Agencja">Agencja</a>
         <a class="link" href="/Portfolio">Portfolio</a>
@@ -44,7 +46,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Technocrack Strona internetowa</figcaption>
+            <figcaption>
+              <span class="headline">Technocrack</span>
+              <span class="category">Strona internetowa</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -55,7 +60,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Grafika New Orlean vs Golden Star Dizajn</figcaption>
+            <figcaption>
+              <span class="headline">Grafika New Orlean vs Golden Star</span>
+              <span class="category">Dizajn</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -66,7 +74,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Restauracja Seafood Aplikacja</figcaption>
+            <figcaption>
+              <span class="headline">Restauracja Seafood</span
+              ><span class="category"> Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -77,7 +88,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Projekt Prime Marketing</figcaption>
+            <figcaption>
+              <span class="headline">Projekt Prime</span
+              ><span class="category"> Marketing</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -88,7 +102,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Projekt Boxes Aplikacja</figcaption>
+            <figcaption>
+              <span class="headline">Projekt Boxes</span
+              ><span class="category"> Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -100,7 +117,9 @@
               height="150"
             />
             <figcaption>
-              Inspiration has no Borders Strona internetowa
+              <span class="headline">Inspiration has no Borders</span
+              ><span class="category"> Strona</span>
+              internetowa
             </figcaption>
           </figure>
         </li>
@@ -112,7 +131,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Magazyn Limited Edition Dizajn</figcaption>
+            <figcaption>
+              <span class="headline">Magazyn Limited Edition</span
+              ><span class="category"> Dizajn</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -123,7 +145,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Projekt LAB Marketing</figcaption>
+            <figcaption>
+              <span class="headline">Projekt LAB</span
+              ><span class="category"> Marketing</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -134,7 +159,10 @@
               width="150"
               height="150"
             />
-            <figcaption>Growing Business Aplikacja</figcaption>
+            <figcaption>
+              <span class="headline">Growing Business</span
+              ><span class="category"> Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
       </ul>
@@ -143,7 +171,9 @@
     <footer>
       <address>
         <p>
-          <a class="logo" href="/goit-markup-hw-02/index.html">WebStudio</a>
+          <a class="logoblue" href="index.html"
+            >Web<span class="logoblack">Studio</span></a
+          >
         </p>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
         <a class="communication" href="tel:+48111111111">Telefon</a>
