changed buttons background color, added styles to index page

--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <title>goit-homeweork-2-attempt-1</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!---menu-->
-      <a href="WebStudio">WebStudio</a>
+      <a class="logoblue" href="index.html"
+        >Web<span class="logoblack">Studio</span></a
+      >
       <nav class="menu">
-        <a href="/Agencja">Agencja</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="/Kontakt">Kontakt</a>
+        <a class="link" href="/Agencja">Agencja</a>
+        <a class="link" href="/Portfolio">Portfolio</a>
+        <a class="link" href="/Kontakt">Kontakt</a>
       </nav>
-      <a href="tel:+48111111111">Telefon</a>
-      <a href="mailto:info@devstudio.com">eMail</a>
+      <a class="communication" href="tel:+48111111111">Telefon</a>
+      <a class="communication" href="mailto:info@devstudio.com">eMail</a>
       <!---/menu-->
       <!---header-->
 
-      <section>
+      <section class="homepagewelcomemessage">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
+        <button type="button" class="orderbutton">Zamów usługe</button>
       </section>
     </header>
     <main>
@@ -145,10 +154,14 @@
     <!---stopka-->
     <footer>
       <address>
-        <p><a href="WebStudio">WebStudio</a></p>
+        <p>
+          <a class="logoblue" href="index.html"
+            >Web<span class="logoblack">Studio</span></a
+          >
+        </p>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a href="tel:+48111111111">Telefon</a>
-        <a href="mailto:info@devstudio.com">eMail</a>
+        <a class="communication" href="tel:+48111111111">Telefon</a>
+        <a class="communication" href="mailto:info@devstudio.com">eMail</a>
       </address>
     </footer>
     <!---/stopka-->
