--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       >
       <nav class="menu">
         <a class="link" href="/Agencja">Agencja</a>
-        <a class="link" href="/Portfolio">Portfolio</a>
+        <a class="link" href="portfolio.html">Portfolio</a>
         <a class="link" href="/Kontakt">Kontakt</a>
       </nav>
       <a class="communication" href="tel:+48111111111">Telefon</a>
