changes added to index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!---header-->
 
       <section class="homepagewelcomemessage">
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <h1>EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
         <button type="button" class="orderbutton">Zamów usługe</button>
       </section>
     </header>
@@ -37,32 +37,32 @@
       <!---Nasze atuty-->
       <ul>
         <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
+          <h4 class="textheadline">LOREM IPSUM</h4>
+          <p class="textcontent">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequuntur necessitatibus sunt id corrupti provident aperiam
             commodi odit quae. Eligendi, unde!
           </p>
         </li>
         <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
+          <h4 class="textheadline">LOREM IPSUM</h4>
+          <p class="textcontent">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequuntur necessitatibus sunt id corrupti provident aperiam
             commodi odit quae. Eligendi, unde!
           </p>
         </li>
         <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
+          <h4 class="textheadline">LOREM IPSUM</h4>
+          <p class="textcontent">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequuntur necessitatibus sunt id corrupti provident aperiam
             commodi odit quae. Eligendi, unde!
           </p>
         </li>
         <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
+          <h4 class="textheadline">LOREM IPSUM</h4>
+          <p class="textcontent">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequuntur necessitatibus sunt id corrupti provident aperiam
             commodi odit quae. Eligendi, unde!
@@ -72,7 +72,7 @@
       <!---/Nasze atuty-->
       <!---Czym się zajmujemy-->
       <section>
-        <h2>Czym się zajmujemy</h2>
+        <h2 class="sectionheadline">Czym się zajmujemy</h2>
         <ul>
           <li>
             <img
@@ -102,7 +102,7 @@
       </section>
       <!---/Czym się zajmujemy-->
       <!---Nasz zespół-->
-      <h2>Nasz zespół</h2>
+      <h2 class="sectionheadline">Nasz zespół</h2>
       <ul>
         <li>
           <figure>
@@ -112,7 +112,10 @@
               width="150"
               height="150"
             />
-            <figcaption>John Doe Product Designer</figcaption>
+            <figcaption>
+              <span class="ourteamname">John Doe</span>
+              <span class="ourteamfunction">Product Designer</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -123,7 +126,10 @@
               width="150"
               height="150"
             />
-            <figcaption>John Doe Frontend Developer</figcaption>
+            <figcaption>
+              <span class="ourteamname">John Doe</span>
+              <span class="ourteamfunction">Frontend Developer</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -134,7 +140,10 @@
               width="150"
               height="150"
             />
-            <figcaption>John Doe Marketing</figcaption>
+            <figcaption>
+              <span class="ourteamname">John Doe</span>
+              <span class="ourteamfunction">Marketing</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -145,7 +154,10 @@
               width="150"
               height="150"
             />
-            <figcaption>John Doe UI Designer</figcaption>
+            <figcaption>
+              <span class="ourteamname">John Doe</span>
+              <span class="ourteamfunction">UI Designer</span>
+            </figcaption>
           </figure>
         </li>
       </ul>
